# agent-paper

./: CLAUDE.md  README.md  pyproject.toml  report.md
.docs/: reason.md  truble.md
docs/: api-reference.md  architecture.md  development-guide.md
output/: analysis_result.md  analysis_summary.md  guide.md  outline.json  requirements.md
src/: config.py
src/agent_paper/: main.py  state.py
src/agent_paper/crews/: __init__.py
src/agent_paper/crews/analysis/: analysis.py
src/agent_paper/crews/analysis/config/: agents.yaml  tasks.yaml
src/agent_paper/crews/assemble/: assemble.py
src/agent_paper/crews/initialize/: initialize.py
src/agent_paper/crews/initialize/config/: agents.yaml  tasks.yaml
src/agent_paper/crews/outline/: outline.py
src/agent_paper/crews/outline/config/: agents.yaml  tasks.yaml
src/agent_paper/crews/section_loop/: section_loop.py
src/agent_paper/crews/section_loop/config/: agents.yaml  tasks.yaml
src/agent_paper/tools/: custom_tool.py
