[project]
name = "agent_paper"
version = "0.1.0"
description = "agent-paper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "agent_paper.main:kickoff"
run_crew = "agent_paper.main:kickoff"
plot = "agent_paper.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
